BUG#20397: Crash when alter table t1 engine = x; Review fixes